--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,7 +1,7 @@
-%h1 Coding Hall of Horror
-- if session[:user_handle]
-  %h3
-    %span= "Welcome #{session[:user_handle]}!"
-- else
-  = link_to '/auth/github', id: 'auth-with-github' do
-    Authenticate with Github
+#topbar
+  #site-logo
+    Coding Hall of Horror
+  #menu
+    = render_menu
+  #session_data
+    = render_session_data
