--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,12 +3,14 @@
 <head>
   <title>Horror</title>
   <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
-  <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
+  <link data-turbolinks-track="true" rel="stylesheet" href="http://yui.yahooapis.com/pure/0.3.0/pure-min.css">
   <%= csrf_meta_tags %>
 </head>
 <body>
+  <div id="layout-wrapper">
+    <%= yield %>
+  </div>
 
-<%= yield %>
-
+<%= javascript_include_tag "application", "data-turbolinks-track" => true %>
 </body>
 </html>
