Styled the topbar

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,7 +1,8 @@
 #topbar
-  #site-logo
-    Coding Hall of Horror
-  #menu
-    = render_menu
-  #session_data
-    = render_session_data
+  #topbar-container.pure-grid-r
+    #site-logo.pure-u-1-6
+      Coding Hall of Horror
+    #menu.pure-u-3-5
+      = render_menu
+    #session_data.pure-u-1-5
+      = render_session_data
