--- a/app/views/shared/_session_data.html.haml
+++ b/app/views/shared/_session_data.html.haml
@@ -1,6 +1,7 @@
-#user-avatar
-  %img{src: user_avatar}
-#welcome-message
-  %span= "Welcome #{user_handle}!"
-= link_to logout_path, class: 'logout-link', method: :delete do
-  Log out
+.pure-grid
+  #user-avatar.pure-u-1-8
+    %img{src: user_avatar}
+  #user-handle.pure-u-1-2
+    %span= user_handle
+  = link_to logout_path, id: 'logout-link', class: 'pure-u-1-3', method: :delete do
+    %span.icon-signout
