Styled authentication buttons

--- a/app/assets/stylesheets/topbar.css.sass
+++ b/app/assets/stylesheets/topbar.css.sass
@@ -1,8 +1,3 @@
-#logout-link
-  color:            gray
-  padding:          4px 0
-  text-decoration:  none
-
 #session-data
   float: right
 
@@ -24,3 +19,8 @@
 
 #user-handle
   padding: 4px 0
+
+.auth-link
+  color:            gray
+  padding:          4px 0
+  text-decoration:  none
