--- a/app/views/shared/_session_data.html.haml
+++ b/app/views/shared/_session_data.html.haml
@@ -3,5 +3,6 @@
     %img{src: user_avatar}
   #user-handle.pure-u-1-2
     %span= user_handle
-  = link_to logout_path, id: 'logout-link', class: 'pure-u-1-3', method: :delete do
+  = link_to logout_path, id: 'logout-link', class: 'pure-u-1-3 auth-link', method: :delete do
     %span.icon-signout
+    %span Sign out
