Refactored Entry#description => Entry#content and removed Entry#image

--- a/app/assets/stylesheets/entry.css.sass
+++ b/app/assets/stylesheets/entry.css.sass
@@ -2,9 +2,16 @@
   font-size: 24px
   font-weight: bolder
 
+#new-entry-content
+  height: 100px
+  resize: none
+
 .entry
   padding:    12px
   min-height: 85px
+
+.entry-content
+  font-size: 14px
 
 .entry-header
   font-size: 10px
@@ -12,11 +19,3 @@
 .entry-title
   font-size:    20px
   font-weight:  bolder
-
-.entry-description
-  font-size: 14px
-
-.entry-image
-  img
-    max-width:  100%
-    max-height: 100%
