--- a/app/views/entries/_form.html.haml
+++ b/app/views/entries/_form.html.haml
@@ -2,9 +2,8 @@
   = form_for Entry.new do |f|
     %legend New horror snippet
     %fieldset
-      = f.text_field :title, class: 'pure-input-1-3', placeholder: 'Title'
-      = f.text_field :image, class: 'pure-input-1-3', placeholder: 'Image URL'
+      = f.text_field :title, class: 'pure-input-2-3', placeholder: 'Title'
     %fieldset
-      = f.text_area :description, class: 'pure-input-2-3', placeholder: 'Description'
+      = f.text_area :content, id: 'new-entry-content', class: 'pure-input-2-3', placeholder: 'Content'
     %fieldset
       = f.submit 'Submit horror', class: 'pure-input-2-3 pure-button'
