Changed display text to Horror story

--- a/app/views/entries/_form.html.haml
+++ b/app/views/entries/_form.html.haml
@@ -1,6 +1,6 @@
 #add-entry-form.pure-form
   = form_for Entry.new do |f|
-    %legend New horror snippet
+    %legend New horror story
     %fieldset
       = f.text_field :title, class: 'pure-input-2-3', placeholder: 'Title'
     %fieldset
